--- a/about.html
+++ b/about.html
@@ -11,11 +11,15 @@
   <div data-include="header"></div>
 
   <main class="container" style="padding:60px 0;font-family:'SUIT Variable','Pretendard',sans-serif;">
+    
     <!-- Hero -->
-    <section style="text-align:center;margin-bottom:60px;">
+    <section style="text-align:center;margin-bottom:80px;">
       <h1 style="font-size:2.4rem;font-weight:800;margin-bottom:16px;color:#111;">
         ⚡ 곧 연결됩니다
       </h1>
+      <p style="font-size:1.1rem;color:#555;max-width:600px;margin:0 auto;line-height:1.6;">
+        작은 실험일지라도, 나아가는 길은 깊고 따뜻하다고 믿습니다.
+      </p>
     </section>
 
     <!-- 시작 -->
@@ -32,17 +36,21 @@
     </section>
 
     <!-- 본질 -->
-    <section style="max-width:700px;margin:0 auto 60px;">
+    <section style="max-width:700px;margin:0 auto 40px;">
       <h2 style="font-size:1.3rem;font-weight:700;margin-bottom:16px;color:#111;">본질</h2>
-      <p style="color:#555;line-height:1.7;font-size:1rem;margin:0;">
-        Project.PAW는 대단한 답을 내놓지 않습니다.<br>
+      <p style="color:#555;line-height:1.7;font-size:1rem;margin:0 0 30px;">
+        Project.PAW는 작은 방법을 찾아보려 합니다.<br>
         그저, 따뜻한 마음들이 모이고 이어지는 방식을 실험합니다.<br><br>
-        돈보다 마음이 먼저 움직이고,<br>
+        돈보다 마음이 먼저 움직이고<br>
         망설임이 행동으로 이어지는 순간,<br>
         그게 제가 바라는 전부이자 철학이고,<br>
-        PAW의 본질입니다.
+        <strong style="color:#111;">PAW의 본질입니다.</strong>
+      </p>
+      <p style="text-align:right;font-size:0.9rem;color:#888;margin:0;">
+        – Project.PAW 총괄 –
       </p>
     </section>
+
   </main>
 
   <!-- Footer -->
