--- a/about.html
+++ b/about.html
@@ -14,40 +14,39 @@
     
     <!-- Hero -->
     <section style="text-align:center;margin-bottom:80px;">
-      <h1 style="font-size:2.4rem;font-weight:800;margin-bottom:16px;color:#111;">
-        ⚡ 곧 연결됩니다
+      <h1 style="font-size:2.6rem;font-weight:800;margin-bottom:20px;color:#111;line-height:1.3;">
+        ⚡ 아직은 작은 실험입니다
       </h1>
-      <p style="font-size:1.1rem;color:#555;max-width:600px;margin:0 auto;line-height:1.6;">
-        작은 실험일지라도, 나아가는 길은 깊고 따뜻하다고 믿습니다.
+      <p style="font-size:1.15rem;color:#555;max-width:640px;margin:0 auto;line-height:1.7;">
+        그러나 나아가는 길은 깊고 따뜻하다고 믿습니다.
       </p>
     </section>
 
     <!-- 시작 -->
-    <section style="max-width:700px;margin:0 auto 60px;">
-      <h2 style="font-size:1.3rem;font-weight:700;margin-bottom:16px;color:#111;">시작</h2>
-      <p style="color:#555;line-height:1.7;font-size:1rem;margin:0;">
-        SNS에서 많은 구조 이야기를 보았습니다.<br>
-        용기 있게 구조했지만, 병원비 앞에서 막히는 현실도 함께 보았습니다.<br><br>
-        구조자의 책임감뿐 아니라,<br>
-        단톡방 곳곳에서 “도와주고 싶다”는 마음들도 있었습니다.<br><br>
-        그 마음들이 흩어지지 않고 이어진다면,<br>
-        망설임은 줄어들고 행동으로 바뀔 수 있을 거라 믿었습니다.
+    <section style="max-width:720px;margin:0 auto 70px;">
+      <h2 style="font-size:1.4rem;font-weight:700;margin-bottom:18px;color:#111;">시작</h2>
+      <p style="color:#555;line-height:1.8;font-size:1.05rem;margin:0;">
+        단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.<br>
+        용기 있는 구조 뒤에는 늘 병원비라는 벽이 있었습니다.<br><br>
+        누구는 책임을 짊어지고,<br>
+        누구는 도와주고 싶다고 말했습니다.<br><br>
+        저는 지금도 그 마음들을 이어주고 싶습니다.
       </p>
     </section>
 
     <!-- 본질 -->
-    <section style="max-width:700px;margin:0 auto 40px;">
-      <h2 style="font-size:1.3rem;font-weight:700;margin-bottom:16px;color:#111;">본질</h2>
-      <p style="color:#555;line-height:1.7;font-size:1rem;margin:0 0 30px;">
-        Project.PAW는 작은 방법을 찾아보려 합니다.<br>
-        그저, 따뜻한 마음들이 모이고 이어지는 방식을 실험합니다.<br><br>
-        돈보다 마음이 먼저 움직이고<br>
+    <section style="max-width:720px;margin:0 auto 50px;">
+      <h2 style="font-size:1.4rem;font-weight:700;margin-bottom:18px;color:#111;">본질</h2>
+      <p style="color:#555;line-height:1.8;font-size:1.05rem;margin:0 0 28px;">
+        Project.PAW에서 작은 방법부터 시작해보려 합니다.<br>
+        따뜻한 마음이 흩어지지 않고 이어지길 실험합니다.<br><br>
+        돈보다 마음이 먼저 움직이고,<br>
         망설임이 행동으로 이어지는 순간,<br>
         그게 제가 바라는 전부이자 철학이고,<br>
         <strong style="color:#111;">PAW의 본질입니다.</strong>
       </p>
       <p style="text-align:right;font-size:0.9rem;color:#888;margin:0;">
-        – Project.PAW 총괄 –
+        – Project.PAW, 시작한 사람 –
       </p>
     </section>
 
