--- a/about.html
+++ b/about.html
@@ -14,12 +14,15 @@
     
     <!-- Hero -->
     <section style="text-align:center;margin-bottom:80px;">
-      <h1 style="font-size:2.6rem;font-weight:800;margin-bottom:20px;color:#111;line-height:1.3;">
-        ⚡ 아직은 작은 실험입니다
-      </h1>
-      <p style="font-size:1.15rem;color:#555;max-width:640px;margin:0 auto;line-height:1.7;">
-        그러나 나아가는 길은 깊고 따뜻하다고 믿습니다.
-      </p>
+      <div style="background:#f9fafb;border:1px solid #e5e7eb;border-radius:14px;
+                  padding:60px 20px;max-width:780px;margin:0 auto;">
+        <h1 style="font-size:2.6rem;font-weight:800;margin-bottom:20px;color:#111;line-height:1.3;">
+          ⚡ 아직은 작은 실험입니다
+        </h1>
+        <p style="font-size:1.15rem;color:#555;max-width:640px;margin:0 auto;line-height:1.7;">
+          그러나 나아가는 길은 깊고 따뜻하다고 믿습니다.
+        </p>
+      </div>
     </section>
 
     <!-- 시작 -->
