--- a/about.html
+++ b/about.html
@@ -28,25 +28,31 @@
     <!-- 시작 -->
     <section style="max-width:720px;margin:0 auto 70px;">
       <h2 style="font-size:1.4rem;font-weight:700;margin-bottom:18px;color:#111;">시작</h2>
+      <p style="color:#555;line-height:1.8;font-size:1.05rem;margin:0 0 18px;">
+        단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.  
+        용기 있는 구조 뒤에는 늘 병원비라는 벽이 있었습니다.
+      </p>
+      <p style="color:#555;line-height:1.8;font-size:1.05rem;margin:0 0 18px;">
+        누구는 책임을 짊어지고,  
+        누구는 도와주고 싶다고 말했습니다.
+      </p>
       <p style="color:#555;line-height:1.8;font-size:1.05rem;margin:0;">
-        단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.<br>
-        용기 있는 구조 뒤에는 늘 병원비라는 벽이 있었습니다.<br><br>
-        누구는 책임을 짊어지고,<br>
-        누구는 도와주고 싶다고 말했습니다.<br><br>
-        저는 지금도 그 마음들을 이어주고 싶습니다.
+        저는 지금도 그 마음들을 <strong>이어주고 싶습니다.</strong>
       </p>
     </section>
 
     <!-- 본질 -->
     <section style="max-width:720px;margin:0 auto 50px;">
       <h2 style="font-size:1.4rem;font-weight:700;margin-bottom:18px;color:#111;">본질</h2>
+      <p style="color:#555;line-height:1.8;font-size:1.05rem;margin:0 0 18px;">
+        Project.PAW에서 <strong>따뜻한 마음이 흩어지지 않고 이어지길</strong> 실험합니다.
+      </p>
+      <p style="color:#555;line-height:1.8;font-size:1.05rem;margin:0 0 18px;">
+        사람의 마음이 머뭇거릴 때,  
+        그 망설임에 <strong>용기</strong>를 덧붙여주는 일.  
+      </p>
       <p style="color:#555;line-height:1.8;font-size:1.05rem;margin:0 0 28px;">
-        Project.PAW에서 작은 방법부터 시작해보려 합니다.<br>
-        따뜻한 마음이 흩어지지 않고 이어지길 실험합니다.<br><br>
-        돈보다 마음이 먼저 움직이고,<br>
-        망설임이 행동으로 이어지는 순간,<br>
-        그게 제가 바라는 전부이자 철학이고,<br>
-        <strong style="color:#111;">PAW의 본질입니다.</strong>
+        그게 Project.PAW가 존재하는 <strong>본질적 이유</strong>입니다.
       </p>
       <p style="text-align:right;font-size:0.9rem;color:#888;margin:0;">
         – Project.PAW, 시작한 사람 –
