--- a/create.html
+++ b/create.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>프로젝트 등록</title>
+<title>프로젝트 등록 - Project.PAW</title>
 <link rel="stylesheet" href="common.css"/>
 <link rel="stylesheet" href="app.min.css"/>
 <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
@@ -18,7 +18,8 @@
   body{background:#fafafa;font-family:'SUIT Variable','Pretendard',system-ui,sans-serif;color:var(--ink);margin:0}
   .wrap{max-width:880px;margin:0 auto;padding:30px 16px}
 
-  h1{font-size:2rem;font-weight:900;margin-bottom:24px;color:var(--ink);text-align:center}
+  h1{font-size:2rem;font-weight:900;margin-bottom:10px;color:var(--ink);text-align:center}
+  .sub{font-size:1rem;color:#666;text-align:center;margin-bottom:30px}
 
   form{display:flex;flex-direction:column;gap:24px}
 
@@ -76,6 +77,8 @@
 
   <main class="wrap">
     <h1>🐾 프로젝트 등록</h1>
+    <p class="sub">작은 실험이지만, 따뜻한 마음을 잇는 시작입니다.</p>
+
     <form id="form">
 
       <!-- 동물 & 구조자 -->
@@ -118,16 +121,18 @@
       <!-- 금액 -->
       <div class="form-section">
         <h2>3. 목표 금액</h2>
-        <div class="grid2">
+        <div class="guide-box">
+          💡 Project.PAW는 구조자가 <strong>30%</strong>를 직접 부담해야 등록할 수 있습니다.<br/>
+          책임 없는 구조는 만들지 않겠다는 약속입니다.
+        </div>
+        <div class="grid2" style="margin-top:16px">
           <div>
             <label>목표 금액</label>
             <input type="text" id="goalAmount" placeholder="예: 500,000원" required/>
-            <div class="note">동물 치료·돌봄에 필요한 금액</div>
           </div>
           <div>
             <label>구조자 부담액</label>
-            <input type="text" id="rescuerContribution" placeholder="예: 100,000원" required/>
-            <div class="note">구조자가 직접 부담하는 금액</div>
+            <input type="text" id="rescuerContribution" placeholder="예: 150,000원" required/>
           </div>
         </div>
       </div>
@@ -137,34 +142,32 @@
         <h2>4. 소통 정보</h2>
         <label>연락처 (카카오톡 ID 또는 전화번호)</label>
         <input name="privateContact" placeholder="예: g123abcd 또는 010-1234-5678" required/>
-        <div class="note">
-          관리자가 연락하기 위한 용도로만 사용됩니다. 전체에 공개되지 않습니다.
-        </div>
+        <div class="note">관리자 확인용으로만 사용됩니다. 전체 공개되지 않습니다.</div>
       </div>
 
       <!-- 이미지 -->
       <div class="form-section">
         <h2>5. 사진 업로드</h2>
 
-        <label>대표 사진 (1장)</label>
+        <label>대표 사진 (필수 1장)</label>
         <input type="file" id="repImage" accept="image/*" required class="upload-box"/>
         <div class="preview" id="previewRep"></div>
 
-        <label>구조 상황 사진 (여러 장)</label>
+        <label>구조 상황 사진 (선택, 여러 장)</label>
         <input type="file" id="situationImages" accept="image/*" multiple class="upload-box"/>
         <div class="preview" id="previewSituation"></div>
 
-        <label>영수증 사진 (여러 장)</label>
+        <label>영수증 사진 (선택, 여러 장)</label>
         <input type="file" id="receiptImages" accept="image/*" multiple class="upload-box"/>
-        <div class="note">진료비·치료비 증빙용 영수증을 첨부해주세요.</div>
+        <div class="note">치료비·진료비 증빙용 영수증을 첨부해주세요.</div>
         <div class="preview" id="previewReceipt"></div>
       </div>
 
-      <p class="note">* 병원명/계좌/카카오톡 초대링크는 <b>관리자 전용</b> 화면에서 등록됩니다.</p>
+      <p class="note">* 병원명/계좌/카카오톡 오픈채팅 링크는 <b>관리자 전용</b> 화면에서 추가됩니다.</p>
 
       <div class="actions">
         <a class="btn ghost" href="index.html">취소</a>
-        <button class="btn primary" type="submit" id="submitBtn">등록하기</button>
+        <button class="btn primary" type="submit" id="submitBtn">마음 잇기 시작하기</button>
       </div>
     </form>
   </main>
@@ -233,7 +236,7 @@
           description:fd.get("description"),
           goalAmount:document.getElementById("goalAmount").dataset.value||0,
           rescuerContribution:document.getElementById("rescuerContribution").dataset.value||0,
-          privateContact:fd.get("privateContact"),  // ✅ 분리 저장
+          privateContact:fd.get("privateContact"),
           coverFile:document.getElementById('repImage').files[0]||null,
           galleryFiles:Array.from(document.getElementById('situationImages').files),
           receiptFiles:Array.from(document.getElementById('receiptImages').files)
@@ -244,7 +247,7 @@
         alert('업로드 실패: '+(err.message||'')); 
       }finally{
         submitBtn.classList.remove('disabled');
-        submitBtn.textContent='등록하기';
+        submitBtn.textContent='마음 잇기 시작하기';
       }
     });
   </script>
