--- a/project_list.html
+++ b/project_list.html
@@ -24,69 +24,71 @@
     .container{max-width:1200px;margin:0 auto;padding:0 20px}
     section{padding:64px 0}
 
-    h1{font-size:2.2rem;font-weight:900;margin-bottom:32px;color:var(--ink)}
+    h1{
+      font-size:2.2rem;
+      font-weight:900;
+      margin-bottom:32px;
+      color:var(--ink)
+    }
 
     /* 검색창 */
     #q{
-      padding:12px 14px;border:1px solid var(--line);
-      border-radius:12px;font-size:1rem;width:100%;max-width:360px;
+      padding:12px 14px;
+      border:1px solid var(--line);
+      border-radius:12px;
+      font-size:1rem;
+      width:100%;
+      max-width:360px;
     }
 
     /* 카드 그리드 */
-    .cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(300px,1fr));gap:32px;margin-top:28px}
+    .cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:32px;margin-top:28px}
     .card{
       display:flex;flex-direction:column;
       background:#fff;border:1px solid var(--line);
       border-radius:16px;overflow:hidden;
-      color:inherit;transition:.2s;
+      text-decoration:none;color:inherit;transition:.2s;
     }
     .card:hover{transform:translateY(-3px);box-shadow:0 6px 16px rgba(0,0,0,.1)}
     .thumb{position:relative}
     .thumb img{width:100%;height:200px;object-fit:cover}
-    .badge{position:absolute;bottom:12px;left:12px;background:var(--accent);color:#fff;
+    .badge{position:absolute;bottom:12px;left:12px;
+      background:var(--accent);color:#fff;
       padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:600}
-    .card-body{padding:20px;flex:1;display:flex;flex-direction:column}
-    .card-body h3{margin:0 0 12px;font-size:1.35rem;font-weight:800;color:var(--ink)}
-    .summary{margin:0 0 18px;font-size:1.05rem;color:var(--sub);line-height:1.6;max-height:3.4em;overflow:hidden}
+    .card-body{padding:20px}
+    .card-body h3{margin:0 0 14px;font-size:1.4rem;font-weight:800;color:var(--ink)}
+    .summary{margin:0 0 10px;font-size:1.05rem;color:var(--sub);line-height:1.6;max-height:3.4em;overflow:hidden}
 
-    .hearts{font-size:1.1rem;font-weight:700;color:var(--accent);margin-bottom:12px}
-    .hearts strong{font-size:1.25rem;margin-left:6px}
+    /* ✅ 핵심 한 줄 강조 */
+    .key-message {
+      font-size: 1rem;
+      font-weight: 700;
+      color: var(--accent);
+      margin: 6px 0 12px;
+      line-height: 1.5;
+    }
 
-    .progress{background:#eee;border-radius:6px;overflow:hidden;height:10px;margin:10px 0}
+    .progress{background:#eee;border-radius:6px;overflow:hidden;height:10px;margin-bottom:12px}
     .progress .bar{background:var(--accent);height:100%}
 
-    .stats{font-size:.95rem;color:var(--sub);margin-bottom:12px;font-weight:500;line-height:1.6}
+    .stats{display:flex;justify-content:space-between;font-size:.95rem;color:var(--sub);margin-bottom:16px;font-weight:500}
     .stats span strong{font-size:1.1rem;font-weight:800;color:var(--ink);margin-left:4px}
 
-    .rescuer{display:flex;align-items:center;gap:8px;font-size:.95rem;font-weight:700;color:var(--ink);margin-top:8px}
+    .rescuer{display:flex;align-items:center;gap:8px;font-size:1rem;font-weight:700;color:var(--ink)}
     .rescuer .avatar{font-size:1.1rem}
-
-    /* CTA 버튼 */
-    .cta{
-      margin-top:auto;
-      display:block;
-      text-align:center;
-      background:var(--accent);
-      color:#fff;
-      font-weight:700;
-      padding:12px;
-      border-radius:10px;
-      text-decoration:none;
-      transition:.2s;
-    }
-    .cta:hover{background:#cf651e}
-
     .muted{color:#888}
 
     @media(max-width:768px){
       .cards{grid-template-columns:1fr;gap:24px}
       .thumb img{height:170px}
-      .card-body h3{font-size:1.25rem}
+      .card-body h3{font-size:1.3rem}
       .summary{font-size:1rem}
+      .stats{font-size:.9rem}
     }
   </style>
 </head>
 <body>
+  <!-- header include -->
   <div data-include="header"></div>
 
   <main class="container">
@@ -97,6 +99,7 @@
     </div>
   </main>
 
+  <!-- footer include -->
   <div data-include="footer"></div>
 
   <script type="module">
@@ -141,14 +144,14 @@
 
     function match(p,q){
       if(!q) return true;
-      const hay=[p.name,p.summary,p.description,p.rescuerName].map(x=>(x||'')+'').join(' ').toLowerCase();
+      const hay=[p.name,p.summary,p.description,p.rescuerName,p.keyMessage].map(x=>(x||'')+'').join(' ').toLowerCase();
       return hay.includes(q.toLowerCase());
     }
 
     async function render(){
       try{
         const all=await apiListProjects({ status:'all' });
-        const q=$q?$q.value.trim():'';
+        const q=$q?$q.value.trim():''; 
         const list=all.filter(p=>match(p,q));
 
         if(!$list) return;
@@ -157,7 +160,7 @@
         const withCovers=await Promise.all(list.map(async p=>({...p,_cover:await coverUrlOf(p)})));
 
         $list.innerHTML=withCovers.map(p=>`
-          <div class="card">
+          <a class="card" href="project.html?id=${encodeURIComponent(p.id)}">
             <div class="thumb">
               <img src="${p._cover}" alt="cover"/>
               <span class="badge">${p.adminApproved?'진행중':'대기중'}</span>
@@ -166,22 +169,17 @@
               <h3>${p.name??'(이름 없음)'}</h3>
               <p class="summary">${p.summary??''}</p>
 
-              <div class="hearts">❤️ 연결된 마음 <strong>${p.supporterCount??0}</strong>명</div>
-
-              <div class="stats">
-                <span>목표 <strong>${fmt(p.goalAmount)}</strong>원</span><br/>
-                <span>달성 <strong>${fmt(p.currentAmount||0)}</strong>원</span><br/>
-                <span>구조자 부담 <strong>${fmt(Math.round((p.goalAmount||0)*0.3))}</strong>원</span>
-              </div>
+              ${p.keyMessage ? `<div class="key-message">❝ ${p.keyMessage} ❞</div>` : ''}
 
               <div class="progress"><div class="bar" style="width:${Math.min(100,Math.round((p.currentAmount||0)/p.goalAmount*100))}%"></div></div>
-
+              <div class="stats">
+                <span>목표 <strong>${fmt(p.goalAmount)}</strong>원</span>
+                <span>달성 <strong>${fmt(p.currentAmount||0)}</strong>원</span>
+                <span>참여자 <strong>${p.supporterCount??0}</strong>명</span>
+              </div>
               <div class="rescuer"><span class="avatar">🐾</span><span>${p.rescuerName??'익명 구조자'}</span></div>
-
-              <!-- CTA 버튼 -->
-              <a href="project.html?id=${encodeURIComponent(p.id)}#donate" class="cta">후원하기</a>
             </div>
-          </div>
+          </a>
         `).join('');
       }catch(e){
         console.error(e);
