--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     }
     .hashtags{
       margin-top:24px;
-      font-size:1.2rem;
+      font-size:1.1rem;
       color:var(--sub);
       font-weight:600;
       line-height:1.8;
     }
     .hashtags span{
       display:inline-block;
-      margin-right:12px;
+      margin:6px 10px;
       color:var(--accent);
       font-weight:800;
     }
@@ -106,6 +106,12 @@
         <span>#유기동물구조</span>
         <span>#직접후원</span>
         <span>#투명모금</span>
+        <span>#유기동물치료비</span>
+        <span>#중성화수술</span>
+        <span>#입양직후검진/예방</span>
+        <span>#투명한구조활동</span>
+        <span>#응급치료지원</span>
+        <span>#사지말고입양하세요</span>
       </div>
     </div>
   </section>
