--- a/project.html
+++ b/project.html
@@ -52,6 +52,12 @@
       border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none}
     .btn-share:hover{background:#555}
 
+    /* ✅ 모바일에서 버튼 세로 배치 */
+    @media(max-width:600px){
+      .action-buttons{flex-direction:column}
+      .btn-kakao, .btn-share{width:100%}
+    }
+
     .section-card{background:#fff;border-radius:16px;padding:28px;margin-top:22px;
                   box-shadow:0 4px 10px rgba(0,0,0,0.05)}
     .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
