--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
     /* ✅ 카드 레이아웃 */
     .cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(320px,1fr));gap:40px;margin-top:32px}
     .card{position:relative;display:flex;flex-direction:column;border-radius:20px;overflow:hidden;
-      background:#fff;text-decoration:none;color:inherit;transition:.3s}
-    .card:hover{transform:translateY(-6px);box-shadow:0 12px 24px rgba(0,0,0,0.15)}
+      background:#fff;text-decoration:none;color:inherit;transition:.3s;box-shadow:0 4px 10px rgba(0,0,0,0.08)}
+    .card:hover{transform:translateY(-6px);box-shadow:0 14px 28px rgba(0,0,0,0.2)}
 
     .thumb{position:relative;height:260px;overflow:hidden}
-    .thumb img{width:100%;height:100%;object-fit:cover}
+    .thumb img{width:100%;height:100%;object-fit:cover;transition:transform .4s ease}
+    /* ✅ hover 시 이미지 zoom-in */
+    .card:hover .thumb img{transform:scale(1.05)}
+
     .overlay{position:absolute;top:0;left:0;right:0;bottom:0;display:flex;flex-direction:column;justify-content:flex-end;
       background:linear-gradient(to top,rgba(0,0,0,0.55),rgba(0,0,0,0));color:#fff;padding:20px}
     .overlay .badge{align-self:flex-start;background:var(--accent);color:#fff;padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:700;margin-bottom:auto}
@@ -33,7 +36,7 @@
 
     .card-body{padding:20px;background:#fff}
     .hearts{color:var(--accent);font-weight:700;margin-bottom:8px;font-size:1rem}
-    /* ✅ 핵심문구 색상 black */
+    /* ✅ 핵심문구 black */
     .key-message{color:#111;font-weight:600;margin:8px 0;font-size:1rem}
     .progress{background:#eee;border-radius:6px;overflow:hidden;height:12px;margin:12px 0}
     .progress .bar{background:var(--accent);height:100%}
